Renamed and added warning

--- a/linux/mdadm/1.grow-raid.md
+++ b/linux/mdadm/1.grow-raid.md
@@ -1,5 +1,7 @@
 # 1 Growing Software RAID Arrays with mdadm
 
+**Warning** These commands were selected and written specifically a **RAID 5** array.
+
 - [1 Growing Software RAID Arrays with mdadm](#1-growing-software-raid-arrays-with-mdadm)
   - [1.1 Swapping Disks/Partitions](#11-swapping-diskspartitions)
     - [1.1.1 Checking Array Status](#111-checking-array-status)
